ags (0.7.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLadspaBridge, AgsDssiBridge and AgsLv2Bridge restore from XML
	* implemented AgsSimpleFile which is much faster than AgsFile
	* implemented AgsSimpleFileRead task for reading files using simple API
	* implemented AgsSimpleFileWrite task for writing files using simple API
	* implemented AgsSimpleAutosaveThread that makes use of AgsSimpleFile to save its files
	* implemented :control_type_name parameter of ags_line_add_effect()
	* fixed duplicated entries in plugins manager: AgsLadspaManager, AgsDssiManager and AgsLv2Manager

ags (0.7.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am to include entire documentation and having a build
	* fixed ags_config.c to use working default values

ags (0.7.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed proper license information and notes in README
	* included ags_marshallers.list in tarball

ags (0.7.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_update_bulk_member.c to work with DSSI and improved the code
	* fixed Lv2 playback
	* fixed Lv2 atom sequence type and Lv2 atom body access in ags_lv2_plugin.c

ags (0.7.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented support for integer adjustments of LADSPA, DSSI and Lv2
	* improved configure.ac
	* fixed DSSI playback and bank selection
	* fixed finding AgsBulkMember ports

ags (0.7.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed proper version information of *.so, *.a and *.la
	* fixed version information in --version to use AGS_VERSION macro
	* improved ags_dial.c by clearing background

ags (0.7.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock in ags_thread_loop()
	* fixed inresponsive AgsDrumInputPad
	* fixed unset AGS_DEVOUT_INITIALIZED flag as stopping the device

ags (0.7.18)
